--- a/packages/board/src/style/bootstrap.scss
+++ b/packages/board/src/style/bootstrap.scss
@@ -44,15 +44,3 @@
 // @import "bootstrap/scss/utilities/_sizing";
 @import "bootstrap/scss/utilities/_spacing";
 // @import "bootstrap/scss/print";
-
-
-// theme customizations
-
-html {
-  font-size: .9rem;
-}
-
-
-.avatar img {
-  vertical-align: unset;
-}
